@@ -5,3 +5,4 @@ SMTP_SERVER=smtp.example.com
 SMTP_PORT=587
 TICKETS_FILE=tickets.json
 EMPLOYEE_FILE=employee.json
+DISCORD_WEBHOOK_URL="https://discord.com/api/webhooks/XXXXX/YYYYY"
